# application_settings

./: .gitignore  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  LICENSE  README.md  get-poetry.py  pyproject.toml  release actions.txt
.github/workflows/: application_config-tests.yml  application_settings-buid_deploy_docs.yml  application_settings-buid_deploy_docs_release.yml  application_settings-tests.yml  build_deploy_docs_dev_release.yml  build_deploy_docs_develop.yml  build_deploy_docs_release.yml  merge_checks.yml  release_deploy_pypi.yml
0.2.0/: index.html
0.2.0.bck/docs/2-Defining_parameters/: index.html
0.2.0.bck/docs/Quick_start/: index.html
0.2.0.bck/reference/application_settings/type_notation_helper/: index.html
0.2.0/CHANGELOG/: index.html
0.2.0/CODE_OF_CONDUCT/: index.html
0.2.0/docs/1-Installation/: index.html
0.2.0/docs/4-Using_parameters/: index.html
0.2.0/reference/application_settings/: index.html
0.2.0/reference/application_settings/settings_base/: index.html
0.2.0/search/: search_index.json
0.2.1a/: 404.html
0.2.1b/reference/application_settings/configuring_base/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/docs/2-Defining_parameters/: index.html
0.3.0/reference/application_settings/configuring_base/: index.html
0.3.0/reference/application_settings/container_base/: index.html
0.3.0/reference/application_settings/container_section_base/: index.html
0.3.0/reference/application_settings/settings_base/: index.html
0.4.0/: 404.html  index.html
0.4.0/2-Defining_parameters/: index.html
0.4.0/3-Files/: index.html
0.4.0/7-Recipes/: index.html
0.4.0/CHANGELOG/: index.html
0.4.0/Quick_start/: index.html
0.4.0/reference/SUMMARY/: index.html
0.4.0/reference/application_settings/__init__/: index.html
0.4.0/reference/application_settings/container_section_base/: index.html
0.4.0/reference/application_settings/settings_base/: index.html
0.4.0/reference/application_settings/type_notation_helper/: index.html
0.4.0/search/: search_index.json
0.5.0/: generate_api_pages.py  index.html  objects.inv  sitemap.xml
0.5.0/1-Installation/: index.html
0.5.0/2-Defining_parameters/: index.html
0.5.0/4-Using_parameters/: index.html
0.5.0/5-Usage_in_a_library_package/: index.html
0.5.0/7-Recipes/: index.html
0.5.0/CHANGELOG/: index.html
0.5.0/Quick_start/: index.html
0.5.0/reference/application_settings/configuring_base/: index.html
0.5.0/reference/application_settings/container_section_base/: index.html
0.5.0/reference/application_settings/parameter_kind/: index.html
0.5.0/search/: search_index.json
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/1-Installation/: index.html
develop/2-Defining_parameters/: index.html
develop/3-Files/: index.html
develop/4-Using_parameters/: index.html
develop/5-Usage_in_a_library_package/: index.html
develop/6-Handling_deviations/: index.html
develop/7-Recipes/: index.html
develop/CHANGELOG/: index.html
develop/CODE_OF_CONDUCT/: index.html
develop/Quick_start/: index.html
develop/develop/CHANGELOG/: index.html
develop/develop/docs/4-Using_parameters/: index.html
develop/develop/reference/application_settings/: index.html
develop/develop/search/: search_index.json
develop/docs/1-Installation/: index.html
develop/docs/2-Defining_parameters/: index.html
develop/docs/3-Files/: index.html
develop/docs/4-Using_parameters/: index.html
develop/docs/5-Handling_deviations/: index.html
develop/docs/5-Usage_in_a_library_package/: index.html
develop/docs/6-Handling_deviations/: index.html
develop/docs/Quick_start/: index.html
develop/reference/SUMMARY/: index.html
develop/reference/application_settings/: index.html
develop/reference/application_settings/__init__/: index.html
develop/reference/application_settings/configuring_base/: index.html
develop/reference/application_settings/container_base/: index.html
develop/search/: search_index.json
docs/: 1-Installation.md  2-Defining_parameters.md  3-Files.md  4-Using_parameters.md  5-File_location.md  5-Handling_deviations.md  5-Usage_in_a_library_package.md  6-Handling_deviations.md  7-Logging.md  7-Recipes.md  Quick_start.md  mkdocs.yml
docs/docs/: 1-Installation.md  2-Defining_parameters.md  3-Files.md  4-Using_parameters.md  5-Usage_in_a_library_package.md  7-Recipes.md  Quick_start.md
examples/Quick_start/: config.toml  example_configuring.py  example_settings.py  settings.json
examples/Quick_start/config/: __main__.py  config.py  config.toml
examples/Quick_start/settings/: __main__.py  settings.json  settings.py
examples/Recipies/initialization/: __main__.py  the_config.toml
examples/Recipies/loading/: __main__.py  app_config.py  lib_config.py  the_config.toml
release/CHANGELOG/: index.html
release/CODE_OF_CONDUCT/: index.html
release/docs/4-Using_parameters/: index.html
release/docs/6-Handling_deviations/: index.html
release/docs/Quick_start/: index.html
release/reference/application_settings/: index.html
release/search/: search_index.json
site/: index.html
site/develop/search/: search_index.json
site/docs/5-Handling_deviations/: index.html
src/application_config/: __init__.py  configuring_base.py  container_base.py  py.typed  settings_base.py
src/application_settings/: __init__.py  config.py  configuring_base.py  container_base.py  container_section_base.py  convenience.py  parameter_kind.py  protocols.py  settings_base.py  type_notation_helper.py
src/application_settings/_private/: file_operations.py  file_operations_utils.py  json_file_operations.py  toml_file_operations.py
src/application_settings/private/: _file_operations.py
tests/: config_example.py  config_example_module_global.py  test_config.py  test_initialization_import.py  test_settings.py  test_version.py
tst/: 404.html  sitemap.xml
tst/2-Defining_parameters/: index.html
tst/4-Using_parameters/: index.html
tst/Quick_start/: index.html
tst/reference/SUMMARY/: index.html
tst/search/: search_index.json
(+37 files in other folders)
